[gd_scene load_steps=4 format=3 uid="uid://cn2hv4dxg32u2"]

[ext_resource type="Texture2D" uid="uid://c72pjwqnl4pjs" path="res://icon.png" id="1"]
[ext_resource type="Theme" uid="uid://bdeo7pu4bmfqy" path="res://Themes/KolacheTheme.tres" id="2"]
[ext_resource type="Script" path="res://Main.gd" id="4"]

[node name="Main" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.172549, 0.172549, 0.172549, 1)
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 103.0
offset_top = 40.0
offset_right = -103.0
offset_bottom = -40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LogoButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2")
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 80
text = "~ Kolache Kit ~"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StickersButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
theme_override_font_sizes/font_size = 60
text = "Stickers"

[node name="TimersButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
theme_override_font_sizes/font_size = 60
text = "Timers"

[node name="QuitProgram" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.98
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.02
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
theme = ExtResource("2")
text = "X"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LogoButton" to="." method="_on_logo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/StickersButton" to="." method="_on_StickersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TimersButton" to="." method="_on_TimersButton_pressed"]
[connection signal="pressed" from="QuitProgram" to="." method="_on_quit_program_pressed"]
